--- a/Views/empleados.html
+++ b/Views/empleados.html
@@ -6,6 +6,7 @@
     <title>Gestión de Empleados</title>
     <link rel="stylesheet" href="../css/empleados.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://kit.fontawesome.com/bd916cda58.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -81,13 +82,13 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Email</th>
-                        <th>Sexo</th>
-                        <th>Area</th>
-                        <th>Boletín</th>
-                        <th>Descripción</th>
-                        <th>Acciones</th>
+                        <th><i class="fa-solid fa-user"></i>Nombre</th>
+                        <th><i class="fa-solid fa-at"></i>Email</th>
+                        <th><i class="fa-solid fa-venus-mars"></i>Sexo</th>
+                        <th><i class="fa-solid fa-toolbox"></i>Area</th>
+                        <th><i class="fa-solid fa-envelope"></i>Boletín</th>
+                        <th>Modificar</th>
+                        <th>Eliminar</th>
                     </tr>
                 </thead>
                 <tbody id="tablaEmpleados">
