--- a/Css/empleados.css
+++ b/Css/empleados.css
@@ -260,6 +260,10 @@ input[type="checkbox"] {
     margin-bottom: 20px;
 }
 
+.container section {
+    margin-bottom: 50px;
+}
+
 #modalEditar .modal-header h2 {
     font-size: 20px;
 }
@@ -269,6 +273,10 @@ input[type="checkbox"] {
     color: #333;
     font-size: 20px;
     cursor: pointer;
+}
+
+th i {
+    margin-right: 8px;
 }
 
 .form-group-boletin-empleado {
@@ -318,4 +326,40 @@ input[type="checkbox"] {
     #modalEditar .modal-content {
         width: 95%;
     }
+}
+
+
+/* Estilos para las celdas de la tabla */
+#tablaEmpleados td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 150px;
+}
+.btn-editar,
+.btn-eliminar {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 5px;
+    font-size: 0.9em;
+}
+
+.btn-editar {
+    background-color: #007bff;
+    color: white;
+}
+
+.btn-eliminar {
+    background-color: #dc3545;
+    color: white;
+}
+
+.btn-editar:hover {
+    background-color: #0056b3;
+}
+
+.btn-eliminar:hover {
+    background-color: #c82333;
 }
