--- a/Css/empleados.css
+++ b/Css/empleados.css
@@ -64,6 +64,26 @@ button {
     font-size: 14px;
 }
 
+.gestion-empleados {
+    margin-bottom: 20px;
+}
+
+.gestion-empleados-button {
+    border: none;
+    border-radius: 5px;
+    flex-grow: 1;
+    padding: 15px 25px;
+    background-color: #218cff;
+    color: white;
+    font-size: 1.1em;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Ya tienes una transición, ¡perfecto! */
+    text-align: center;
+    position: relative;
+    width: 100%;
+}
+
 button:hover {
     background-color: #303f9f;
 }
